public static class Const
{
    public struct Tags
    {
        public const string PLAYER = "Player";
        public const string ENEMY = "Enemy";
    }

    public struct PlayerAnimations
    {
        public const string BOOL_ISFALLING = "IsFalling";

        public const string TRIGGER_JUMP = "Jump";
        public const string TRIGGER_DEAD = "Dead";
        public const string TRIGGER_ATTACK = "Attack";
        public const string TRIGGER_DASH = "Dash";

        public const string FLOAT_SPEED = "Speed";
        public const string FLOAT_ATTACK_INDEX = "AttackIndex";
        public const string FLOAT_LINEAR_VELOCITY_Y = "LinearVelocityY";
    }

}
